--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="weixin://">打开微信客户端</a><br>
-    <a href="miguaikanapp://">打开咪咕爱看客户端</a>
+    <a href="miguaikanapp://splash?vodid=96976833">打开咪咕爱看客户端</a>
 </body>
 </html>
