--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="weixin://">打开微信客户端</a><br>
-    <a href="miguaikanapp://splash?vodid=96976833">打开咪咕爱看客户端</a>
+    <a href="miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220">打开咪咕爱看客户端</a>
 </body>
 </html>
