--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 <body>
     <a href="weixin://">打开微信客户端</a><br>
     <a href="miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220">打开咪咕爱看客户端</a>
-</body>
+    <button onclick="open()">open</button>
+    <script>
+    
+    function open(){
+    var ifr = document.createElement('iframe');
+                ifr.src = "miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220";
+                ifr.style.display = 'none';
+                document.body.appendChild(ifr);
+    }
+    
+    </script>
+    </body>
 </html>
