--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <script>
     
     function open(){
-    var ifr = document.createElement('iframe');
-                ifr.src = "miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220";
-                ifr.style.display = 'none';
-                document.body.appendChild(ifr);
+    console.log("aaaaaa")
+                var src = "miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220";
+                window.location.href=src;
     }
     
     </script>
