--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 var src = "miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220";
                 window.location.href=src;
     }
+        open();
     
     </script>
     </body>
