--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <a href="weixin://">打开微信客户端</a><br>
     <a href="miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220">打开咪咕爱看客户端</a>
     <button onclick="open()">open</button>
+    <a href="#">测试</a>
+    <p>测试2</p>
+    <input value="" type="text" />
     <script>
     
     function open(){
