--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>h5唤起客户端</title>
+    <style>
+    a,div,input(selector) {-webkit-tap-highlight-color: rgba(0,0,0,0);-webkit-tap-highlight-color : transparent ;}
+    </style>
 </head>
 <body>
     <a href="weixin://">打开微信客户端</a><br>
