--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>h5唤起客户端</title>
     <style>
     a,div,input(selector) {-webkit-tap-highlight-color: rgba(0,0,0,0);-webkit-tap-highlight-color : transparent ;}
+        input{
+            -webkit-appearance: none;
+        }
     </style>
 </head>
 <body>
