--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         input{
             -webkit-appearance: none;
         }
+        body{
+            -webkit-text-size-adjust: 100%;//禁止文本缩放
+        }
     </style>
 </head>
 <body>
