--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="weixin://">打开微信客户端</a><br>
     <a href="miguaikanapp://splash?srcch=04_29___&psrcch=04_29_share_480110_0&spage=share&vodcode=636656825&vodid=53779220">打开咪咕爱看客户端</a>
     <button onclick="open()">open</button>
+    <a href="miguaikanapp://splash?vodcode=636656825;vodid=53779220;srcch=04_29___">打开</a>
     <a href="#">测试</a>
     <p>测试2</p>
     <input value="" type="text" />
