--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <button onclick="open()">open</button>
     <a href="miguaikanapp://splash?srcch=10000003&linkUrl=http://aikanvod.miguvideo.com/video/p/AC_akVipPrivileged.jsp">打开</a>
     <a href="#">测试</a>
+    <a href="miguaikanapp://splash?srcch=&psrcch=__cs*AsiaPacificDrainage_1005357_0&spage=share&vodid=&vodcode=M0600637000000010000000004838325">dsdfdf</a>
     <p>测试2</p>
     <input value="" type="text" />
     <script>
