--- a/index.html
+++ b/index.html
@@ -27,6 +27,25 @@
     <a href="#">测试</a>
     <a href="miguaikanapp://splash?srcch=&psrcch=__cs*AsiaPacificDrainage_1005357_0&spage=share&vodid=&vodcode=M0600637000000010000000004838325">dsdfdf</a>
     <p>测试2</p>
+    <a href="miguaikan://openticket">miguaikan://openticket</a>
+<br>
+<br>
+<a href="miguaikan://openticket?callback">miguaikan://openticket</a>
+<br>
+<br>
+
+<a href="miguaikanapp://openticket">miguaikanapp://openticket</a>
+
+<br>
+<br>
+<a href="miguaikanapp://openticket?callback">miguaikanapp://openticketcallback</a>
+
+<br>
+<br>
+
+<a id ="btn" >miguaikan://openticket click</a>
+
+<br>
     <input value="" type="text" />
     <script>
     
