--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <br>
 <br>
-<a href="miguaikanapp://splash?srcch=10000003&linkUrl=https://gw.aikan.miguvideo.com/h5/index.html?v=1#/super-vip">super-vip</a>
+<a href="miguaikan://splash?srcch=10000003&linkUrl=http://gw.aikan.miguvideo.com/h5/index.html?v=1#/super-vip">super-vip</a>
 
 <br>
 <br>
