--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <br>
 <br>
-<a href="miguaikan://splash?srcch=10000003&linkUrl=http://gw.aikan.miguvideo.com/h5/index.html?v=1#/super-vip">super-vip</a>
+<a href="miguaikan://splash?srcch=10000003&linkUrl=https%3A%2F%2Fgw.aikan.miguvideo.com%2Fh5%2Findex.html%3Fv%3D1%23%2Fsuper-vip">super-vip</a>
 
 <br>
 <br>
