--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <br>
 <br>
-<a href="miguaikan://splash?srcch=10000003&linkUrl=https%3A%2F%2Fgw.aikan.miguvideo.com%2Fh5%2Findex.html%3Fv%3D1%23%2Fsuper-vip">super-vip</a>
+<a href="miguaikanapp://splash?srcch=10000003&linkUrl=https%3A%2F%2Fgw.aikan.miguvideo.com%2Fh5%2Findex.html%3Fv%3D1%23%2Fsuper-vip">super-vip</a>
 
 <br>
 <br>
